--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             max-width: 100%;
             height: auto;
             margin: 0 auto;
+            box-shadow: 0px 0px 10px white;
             margin-top: 1rem;
             display: none;
         }
